Adding caching for images

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "d3-path": "^1.0.9",
     "dayjs": "^1.8.19",
     "expo": "~36.0.0",
+    "expo-asset": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
+    "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
