--- a/app.json
+++ b/app.json
@@ -24,7 +24,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
-    }
+      "supportsTablet": false
+    },
+    "description": "",
+    "githubUrl": "https://github.com/PeteOyable/weazr"
   }
 }
